<resources>
    <string name="app_name">QuranUA</string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_basic">Основнi</string>
    <string name="settings_arabictext">Арабський текст</string>
    <string name="settings_texttransfer">Текст перекладу</string>
    <string name="settings_textsize">Розмiр тексту</string>
    <string name="aboush1">QURAN UA</string>
    <string name="aboutus">Переклад смислів Корану українською мовою виконано кандидатом історичних наук, українським релігієзнавцем Михайлом Якубовичем безпосередньо з арабської мови й з урахуванням традиційних мусульманських тлумачень. Перше видання перекладу вийшло 2013 року в Центрі імені Короля Фагда з видання Священного Корану (Медина, Саудівська Аравія), далі видавалося в Києві, Стамбулі, Анкарі, в тому числі за погодженням Управління в справах релігій Туреччини. На сьогодні праця залишається єдиним повним перекладом смислів Корану українською мовою з оригіналу. Додаток QuranUA випущено за сприяння Асоціації мусульман України.</string>
    <string name="settings_textsizeview">Iмям Аллага Милостивого Милосердного</string>
</resources>
